fix splassh on small screen

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -23,5 +23,5 @@ body, header, nav {
     align-items: stretch;
     overflow-x: hidden;
     /* max-width: 1500px; */
-    padding-right: 19%
+    /* padding-right: 19% */
 }
